# Course_4_Coursework

./: .gitignore  README.md  main.py  pyproject.toml
.pytest_cache/v/cache/: nodeids
src/from_api_integration/: class_parser.py  classes_for_services.py
src/func/: auxiliary_func.py  interactive_with_user.py
src/vacancy_classes/: class_vacancy.py  work_with_vacancies_list.py
src/work_with_data/: base_class.py  work_with_data.py
tests/: test_class_vacancy.py  test_classes_for_services.py  test_func.py  test_work_with_data.py  test_work_with_vacancies_list.py
