[tool.poetry]
name = "course-4-coursework"
version = "0.1.0"
description = ""
authors = ["Kovkov-D-S <158774590+Kovkov-D-S@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
attrs = "22.2.0"
colorama = "0.4.6"
coverage = "7.0.5"
iniconfig = "2.0.0"
packaging = "23.0"
pluggy = "1.0.0"
pytest = "7.2.1"
pytest-cov = "4.0.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
idna = "3.6"
requests = "2.31.0"
urllib3 = "2.2.1"
pandas = "24.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
