[tool.poetry]
name = "Course_4_Coursework"
version = "0.1.0"
description = ""
authors = ["Kovkov-D-S <158774590+Kovkov-D-S@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.*"

[tool.poetry.group.dev.dependencies]
attrs = "22.*"
colorama = "*"
coverage = "7.*"
packaging = "23.*"
pluggy = "1.*"
pytest = "7.*"
pytest-cov = "4.*"
certifi = "2024.*"
charset-normalizer = "3.*"
idna = "3.*"
requests = "2.*"
urllib3 = "2.*"
pandas = "2.2.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
